--- a/InternetStore/.gitignore
+++ b/InternetStore/.gitignore
@@ -5,13 +5,14 @@ target/
 
 ### IntelliJ IDEA ###
 .idea
-.idea/modules.xml
-.idea/jarRepositories.xml
 .idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+.idea/encodings.xml
+.idea/jarRepositories.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/sda-java-145-exampleproject.iml
+.idea/uiDesigner.xml
+.idea/vcs.xml
 
 ### Eclipse ###
 .apt_generated
