commit #38 - divided menu cases into separate private methods, few sonar suggested corrections, .json files are now placed externally and not pushed to git

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ InternetStore/target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+function_programming17.iml
+data/*
+.idea/*
 .idea/.gitignore
 .idea/compiler.xml
 .idea/encodings.xml
